2007-03-13  Miloslav Trmac  <mitr@redhat.com>

	* usermount.c (ACTION_FORMAT, ACTION_MOUNT): Use an enum.
	(struct mountinfo): Remove members mount, format, mount_label.  All
	users updated.
	(is_mounted): Replace check_is_mounted (), remove unnecessary checks,
	modify to be usable from build_mountinfo_list ().
	(build_mountinfo_list): Use libblkid for LABEL= and UUID= resolution.
	Add support for "user" and "users".  Simplify and clean up.
	(format): Remove copy&pasted info->mounted changes.  FIx memory leaks.
	(response_callback): Use the correct prototype.  Remove info->mounted
	changes, rely on changed_callback () instead.  Fix a memory leak.
	(create_usermount_window): Use DATADIR.  Remove local variables
	duplicating static variables.
	(main) Use LOCALEDIR.  Remove unnecessary gtk_set_locale ().

	* Makefile.am (usermount_LDADD): Link with libblkid.

	* usermount.1: Fix a typo.

	* pam-panel-icon.c (RESPONSE_DO_NOTHING): Use a positive number to
	avoid conflicts with GTK+.

	* Makefile.am (usermount_LDADD, userpasswd_LDADD): Use GTK_LIBS instead
	of LIBGLADE_LIBS.  Clean up.
	* userdialogs.c: Remove unnecessary #include.
	* usermount.c: Remove all libglade references.
	* usermode.glade (query_box, message_box): Remove unused dialogs.
	* usermode.glade1: Remove obsolete file.

2007-03-11  Miloslav Trmac  <mitr@redhat.com>

	* userdialogs.c (relay_value, create_query_box_i, create_query_box)
	(create_invisible_query_box): Remove, the functions were used only in
	test-userdialog.c.
	* userdialogs.h: Remove unused includes.
	(UD_OK_TEXT, UD_HELP_TEXT, UD_CANCEL_TEXT)
	(UD_EXIT_TEXT): Remove unused macros.
	(create_query_box, create_invisible_query_box): Remove declarations.
	* userhelper-wrap.c
	* userinfo.c: #include <glib/gi18n.h>.

	* test-userdialog.c (hello_world): Make static.
	(main): Remove create_query_box () and create_invisible_query_box ()
	examples.
	(hello_world2): Remove.

	* test-userdialog.c (main): Use LOCALEDIR.  Don't unnecessarily call