@@ -1,3 +1,9 @@
+2007-03-14  Miloslav Trmac  <mitr@redhat.com>
+
+	* userpasswd.c: Don't #include "userdialogs.h",  use <libintl.h>
+	instead.
+	(main): Use LOCALEDIR.  Remove unnecessary gtk_set_locale ().
+
 2007-03-13  Miloslav Trmac  <mitr@redhat.com>
 
 	* usermount.c (ACTION_FORMAT, ACTION_MOUNT): Use an enum.
